# AIVA-Mock-Interviewer

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_READY.md  DOCUMENTATION_INDEX.md  Dockerfile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  utils.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
src/: app.py  backend.py
